<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="#3B429F"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:text="@string/_48_laws_of_power"
        android:textAlignment="center"
        android:textColor="#F5D7E3"
        android:textColorHighlight="#AA7DCE"
        android:textSize="25sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:padding="5dp"
            android:text="@string/chapter_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/lorem"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>